manual play and scoring done

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="row" id="game-header">
 			<div class="col-xs-2 stack" id="deck">
 				<h2>Deck:</h2>
-				<div class="card card-info">
+				<div class="card card-utility">
 					<div class="card-label">
 						52
 					</div>
